--- a/.github/workflows/hindi_dubber.yml
+++ b/.github/workflows/hindi_dubber.yml
@@ -55,7 +55,7 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB2_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload video to Release
         uses: actions/upload-release-asset@v1
